# iriusrisk-security-research-assistant

./: .gitignore  README.md  blockchain-components.xml  blockchain-rules.xml  create_test_file.py  pyproject.toml  pytest.ini
docs/: CHANGELOG.md  DEV.md  DOCS.md  SCHEMA.md
frontend/: main.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.css  index.js
frontend/src/components/marketplace/: Marketplace.js
frontend/src/components/project/: Project.js
frontend/src/components/utils/: ActivityIndicatorContext.js  ElementCreationService.js  SimpleCard.js  Template.js  UploadFiles.js  UploadService.js  commonFunctions.js
frontend/src/components/version/: Version.js
isra/: main.py
isra/src/component/: component.py  component2.py  template.py
isra/src/config/: config.py  constants.py
isra/src/ile/: ile.py
isra/src/ile/backend/: main.py
isra/src/ile/frontend/: .eslintcache  package.json
isra/src/models/: Component.py  Control.py  Reference.py  Relation.py  RiskPattern.py  RiskScore.py  Taxonomy.py  Template.py  Threat.py
isra/src/resources/: cre_mappings_plus.yaml  marketplace_structure.json  output_system_fields_values.yaml  prompts.yaml  rules.yaml  test_answers.yaml  ysc_schema.json
isra/src/resources/XSD_Schema/: library.xsd  template.xsd
isra/src/resources/external_info/: asvs.jsonl  cwe.jsonl  mitre_attack_mitigations.jsonl
isra/src/resources/prompts/: create_description_for_question.md  extract_standard_from_table.md  fix_description.md  generate_component_description.md  generate_control.md  generate_control_description.md  generate_new_control_description.md  generate_new_threat_description.md  generate_question.md  generate_threat.md  generate_threat_description.md  generate_threat_model.md  generate_threats_for_controls.md  get_atlas_mitigation.md  get_atlas_technique.md  get_attack_mitigation.md  get_attack_technique.md  get_baseline_standard_ref.md  get_baseline_standard_section.md  get_cia_triad.md  (+11 more)
isra/src/screening/: screening.py  screening_service.py
isra/src/srt/: srt.py
isra/src/standards/: standards.py
isra/src/tests/: integrity_tests_all_components.py  integrity_tests_all_libraries.py  integrity_tests_component.py  integrity_tests_library.py  integrity_tests_standards.py  tests.py
isra/src/tm/: tm.py
isra/src/utils/: api_functions.py  cwe_functions.py  decorators.py  gpt_functions.py  log_functions.py  questionary_wrapper.py  structure_functions.py  text_functions.py  xlsx_functions.py  xml_functions.py  yaml_functions.py
isra/src/v2/: Component.py  Control.py  READ_THIS.md  Reference.py  Relation.py  RiskPattern.py  RiskScore.py  Standard.py  Taxonomy.py  Template.py  Threat.py  component2.py  constants2.py  standards2.py  yaml_functions2.py
isra/test/: TEST.md  aux_test_functions.py  test_api.py  test_cli.py
isra/test/test_files/: test1.irius  test1_2.irius
old_code/: Change.java  ChangelogItem.java  ChangelogReport.java  ChangelogService.java  Graph.java  GraphList.java  IRNode.java  LibraryService.java  LibrarySummariesResponse.java  LibrarySummary.java  Link.java  Node.java  RuleNode.java
scripts/: deprecater.py  export.bat  export.sh  export_from_file.bat  export_from_file.sh  to_replace.txt
(+162 files in other folders)
