[tool.poetry]
name = "isra"
version = "2.7.0"
description = "IriusRisk Security Research Assistant: a tool to create components as code"
authors = ["Alvaro Reyes <areyes@iriusrisk.com>"]
readme = "README.md"

[tool.poetry.scripts]
isra = "isra.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.13.0"}
click = "8.1.8" # This version is fixed due to a bug that was happening
loguru = "^0.7.2"
pytest = "^8.3.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
lxml = "^5.3.0"
keyboard = "^0.13.5"
openai = "^1.54.4"
requests = "^2.32.2"
pyyaml = "^6.0.2"
questionary = "^2.0.1"
rich = "^13.9.4"
importlib-resources = "^6.4.5"
jsonschema = "^4.23.0"
pytest-subtests = "^0.13.0"
xlsxwriter = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
