[tool.poetry]
name = "isra"
version = "3.0.0"
description = "IriusRisk Security Research Assistant: a tool to create components as code"
authors = ["Alvaro Reyes <areyes@iriusrisk.com>"]
readme = "README.md"
include = [
    { path = "frontend/build/**/*", format = ["sdist", "wheel"] }
]

[tool.poetry.scripts]
isra = "isra.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.13.0"}
click = "8.1.8" # This version is fixed due to a bug that was happening
loguru = "^0.7.2"
pytest = "^8.3.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
# Note: openpyxl is required by pandas for reading .xlsx files via pandas.read_excel
# We no longer directly import openpyxl - all Excel operations now use pandas API
# but pandas.read_excel() requires openpyxl as an engine for .xlsx files
openpyxl = "^3.1.5"
lxml = "^5.3.0"
keyboard = "^0.13.5"
openai = "^1.54.4"
requests = "^2.32.2"
pyyaml = "^6.0.2"
questionary = "^2.0.1"
rich = "^13.9.4"
importlib-resources = "^6.4.5"
jsonschema = "^4.23.0"
pytest-subtests = "^0.13.0"
xlsxwriter = "^3.2.0"
# ILE Backend Dependencies
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
pydantic = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
aiofiles = "^23.0.0"
xmlschema = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
